test/bad/functions/variadic06.px

func f(...args: [Int]): Void def
    return

f(2, args=[3])
